title section page and styles added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
     <nav class="navbar">
       <h1 class="logo">
@@ -35,5 +36,35 @@
         </ul>
       </div>
     </nav>
+
+    <main>
+      <div class="container-content">
+        <div class="menu">
+          <ul>
+            <li class="selected-li">Hosting</li>
+            <li>Domain</li>
+            <li>SEO</li>
+            <li>Email</li>
+          </ul>
+        </div>
+        <div class="title">
+          <h2>Premium Web Hosting for Your Website</h2>
+        </div>
+        <div class="description">
+          <p>
+            Blazing fast web hosting for individuals and businesses of all sizes
+            backed by 24 x 7 x 365 Support.
+          </p>
+        </div>
+        <div class="btns">
+          <button class="btn1">Create an Account</button>
+          <button class="btn2">Choose your plan</button>
+        </div>
+      </div>
+
+      <div class="container-image">
+        <img src="img/main_img.png" alt="main-img">
+      </div>
+    </main>
   </body>
 </html>
