services section with corrected styles

--- a/index.html
+++ b/index.html
@@ -63,8 +63,76 @@
       </div>
 
       <div class="container-image">
-        <img src="img/main_img.png" alt="main-img">
+        <img src="img/main_img.png" alt="main-img" />
       </div>
     </main>
+
+    <section class="information">
+      <div class="information-container-1">
+        <div class="description">
+          <h3>True Cloud Web Hosting</h3>
+          <p>
+            True Cloud Web Hosting All of the hosting packages we offer are
+            deployed instantly on our SSD powered cloud. We don’t use dedicated
+            servers that operate on single pieces of hardware. Our entire
+            infrastructure is built to be reliable, secure, and scalable.
+          </p>
+        </div>
+        <div class="companies">
+          <ul class="images-container">
+            <li><img src="img/company1.png" alt="company1" /></li>
+            <li><img src="img/company2.png" alt="company2" /></li>
+            <li><img src="img/company3.png" alt="company3" /></li>
+            <li><img src="img/company4.png" alt="company4" /></li>
+            <li><img src="img/company5.png" alt="company5" /></li>
+            <li><img src="img/company6.png" alt="company6" /></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="information-container-2">
+        <div class="services-list">
+          <div class="box1 boxes">
+            <img src="img/icon1.png" alt="time" />
+            <h3>99.9% Uptime</h3>
+            <p>
+              We Keep Your Web build Online 24x7x365. Downtime not only costs
+              you lost visitors but also damages your reputation and search
+              engine rankings.
+            </p>
+          </div>
+
+          <div class="box2 boxes">
+            <img src="img/icon2.png" alt="host" />
+            <h3>Blazing Fast Web Hosting</h3>
+            <p>
+              We Keep Your Web build Online 24x7x365. Downtime not only costs
+              you lost visitors but also damages your reputation and search
+              engine rankings.
+            </p>
+          </div>
+
+          <div class="services-box3 boxes">
+            <img src="img/icon3.png" alt="ssl" />
+            <h3>Free SSL Certificates</h3>
+            <p>
+              We Keep Your Web build Online 24x7x365. Downtime not only costs
+              you lost visitors but also damages your reputation and search
+              engine rankings.
+            </p>
+          </div>
+
+          <div class="services-box4 boxes">
+            <img src="img/icon4.png" alt="support" />
+            <h3>24x7 Friendly Support</h3>
+            <p>
+              We Keep Your Web build Online 24x7x365. Downtime not only costs
+              you lost visitors but also damages your reputation and search
+              engine rankings.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
