basic and premium packages added

--- a/index.html
+++ b/index.html
@@ -134,5 +134,92 @@
         </div>
       </div>
     </section>
+
+    <section class="payment-plan">
+      <div class="content-container">
+        <div class="title">
+          <h1>Ready to get started with Lemon Wares?</h1>
+          <h3>Choose the package that suits you</h3>
+        </div>
+        <div class="data-selector">
+          <h4>Monthly</h4>
+          <input type="checkbox" id="switch" />
+          <label for="switch">Toggle</label>
+          <h4>Yearly</h4>
+          <!-- <h6>20% discount</h6> -->
+        </div>
+        <div class="subscribe-lvl">
+          <h3 class="active">Basic</h3>
+          <h3>Premium</h3>
+        </div>
+      </div>
+      <div class="packages">
+        <div class="box">
+          <h3>Starter</h3>
+          <p>
+            with all your customers via all conversation channels in one central
+            dashboard.
+          </p>
+          <h1>$2.80</h1>
+          <h4>Per month</h4>
+          <button>Choose this Plan</button>
+          <ul class="privilege-list">
+            <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Standard</h3>
+          <p>
+            with all your customers via all conversation channels in one central
+            dashboard.
+          </p>
+          <h1>$4.20</h1>
+          <h4>Per month</h4>
+          <button>Choose this Plan</button>
+          <ul class="privilege-list">
+            <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Suprem</h3>
+          <p>
+            with all your customers via all conversation channels in one central
+            dashboard.
+          </p>
+          <h1>$7.00</h1>
+          <h4>Per month</h4>
+          <button>Choose this Plan</button>
+          <ul class="privilege-list">
+            <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
+            <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
