price tooltip added

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <h4>Monthly</h4>
           <input type="checkbox" id="switch" />
           <label for="switch">Toggle</label>
-          <h4>Yearly</h4>
+          <h4 class="year-discount">Yearly</h4>
           <!-- <h6>20% discount</h6> -->
         </div>
         <div class="subscribe-lvl">
@@ -220,6 +220,14 @@
           </ul>
         </div>
       </div>
+    </section>
+
+    <section class="stories-section">
+      <div class="stories-container">
+        
+      </div>
+
+      <div class="stories-footer"></div>
     </section>
   </body>
 </html>
