companies rews section added

--- a/index.html
+++ b/index.html
@@ -165,11 +165,19 @@
           <button>Choose this Plan</button>
           <ul class="privilege-list">
             <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>15 Email Accounts</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>Unlimited Database</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>1 Parked Domain</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
@@ -187,11 +195,19 @@
           <button>Choose this Plan</button>
           <ul class="privilege-list">
             <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>15 Email Accounts</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>Unlimited Database</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>1 Parked Domain</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
@@ -209,11 +225,19 @@
           <button>Choose this Plan</button>
           <ul class="privilege-list">
             <li><i class="fa-solid fa-check"></i> <span>2GB SSD</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>15 Email Accounts</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>Unlimited Database</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>10GB Bandwidth</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>15 Email Accounts</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>Unlimited Database</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>4 Subdomains</span></li>
-            <li><i class="fa-solid fa-check"></i> <span>1 Parked Domain</span></li>
+            <li>
+              <i class="fa-solid fa-check"></i> <span>1 Parked Domain</span>
+            </li>
             <li><i class="fa-solid fa-check"></i> <span>2 Websites</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Free SSL</span></li>
             <li><i class="fa-solid fa-check"></i> <span>Softaculous</span></li>
@@ -223,11 +247,70 @@
     </section>
 
     <section class="stories-section">
-      <div class="stories-container">
-        
+      <div class="stories-section-container">
+        <div class="stories-section-container-title">
+          <img src="img/quote.png" alt="quote1" />
+          <h1>Real Stories from Real Customers</h1>
+          <h3>Get inspired by these stories.</h3>
+        </div>
+        <div class="stories-section-container-boxes">
+          <div class="box1">
+            <img src="img/company_story1.png" alt="company-img1" />
+            <div class="description">
+              <img src="img/quote2.png" alt="q2" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                aliquam, purus sit amet luctus venenatis, lectus magna fringilla
+                urna, porttitor rhoncus dolor purus non enim praesent elem
+              </p>
+              <h3>Floyd Miles</h3>
+              <h5>Vice President, CLI</h5>
+            </div>
+          </div>
+
+          <div class="box2">
+            <img src="img/company_story2.png" alt="company-img2" />
+            <div class="description">
+              <img src="img/quote2.png" alt="q2" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                aliquam, purus sit amet luctus venenatis, lectus magna fringilla
+                urna, porttitor rhoncus dolor purus non enim praesent elem
+              </p>
+              <h3>Jane Cooper</h3>
+              <h5>CEO, JPNL</h5>
+            </div>
+          </div>
+
+          <div class="box3">
+            <img src="img/company_story3.png" alt="company-img3" />
+            <div class="description">
+              <img src="img/quote2.png" alt="q2" />
+              <p>LemonWares saved our time in Hosting my company page.</p>
+              <h3>Kristin Watson</h3>
+              <h5>Co-Founder, LeeveOn Branding</h5>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="stories-footer"></div>
+      <div class="stories-section-footer">
+        <div class="stories-section-footer-description">
+          <h1>We serve over 100 Nigerian Websites</h1>
+          <p>
+            Connect LemonWares with your favourite tools that you use daily and
+            keep things on track.
+          </p>
+        </div>
+        <div class="stories-section-footer-companies">
+          <img src="img/company_story2.png" alt="comp1">
+          <img src="img/company_story4.png" alt="comp2">
+          <img src="img/company_story5.png" alt="comp3">
+          <img src="img/company_story3.png" alt="comp4">
+          <img src="img/company_story6.png" alt="comp5">
+          <img src="img/company_story1.png" alt="comp6">
+        </div>
+      </div>
     </section>
   </body>
 </html>
