--- a/index.html
+++ b/index.html
@@ -303,14 +303,26 @@
           </p>
         </div>
         <div class="stories-section-footer-companies">
-          <img src="img/company_story2.png" alt="comp1">
-          <img src="img/company_story4.png" alt="comp2">
-          <img src="img/company_story5.png" alt="comp3">
-          <img src="img/company_story3.png" alt="comp4">
-          <img src="img/company_story6.png" alt="comp5">
-          <img src="img/company_story1.png" alt="comp6">
+          <img src="img/company_story2.png" alt="comp1" />
+          <img src="img/company_story4.png" alt="comp2" />
+          <img src="img/company_story5.png" alt="comp3" />
+          <img src="img/company_story3.png" alt="comp4" />
+          <img src="img/company_story6.png" alt="comp5" />
+          <img src="img/company_story1.png" alt="comp6" />
         </div>
       </div>
     </section>
+
+    <section class="get_in_touch">
+      <div class="triangle1"></div>
+      <div class="triangle2"></div>
+      <div class="triangle3"></div>
+      <div class="get_in_touch-content-box">
+        <h1>We're here to make your website awesome. </h1>
+        <button><i class="fa-solid fa-square-phone"></i> Get  in touch with us</button>
+      </div>
+    </section>
+
+    
   </body>
 </html>
