--- a/index.html
+++ b/index.html
@@ -318,11 +318,52 @@
       <div class="triangle2"></div>
       <div class="triangle3"></div>
       <div class="get_in_touch-content-box">
-        <h1>We're here to make your website awesome. </h1>
-        <button><i class="fa-solid fa-square-phone"></i> Get  in touch with us</button>
+        <h1>We're here to make your website awesome.</h1>
+        <button>
+          <i class="fa-solid fa-square-phone"></i> Get in touch with us
+        </button>
       </div>
     </section>
 
-    
+    <footer>
+      <div class="links">
+        <div class="links-box1">
+          <img src="img/logo_footer.png" alt="logo_footer" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
+            purus sit amet luctus venenatis, lectus magna fringilla urna,
+            porttitor rhoncus dolor purus non enim praesent elem
+          </p>
+        </div>
+        <div class="links-box2">
+          <h2>Service</h2>
+          <h3>Domain</h3>
+          <h3>Shared Hosting</h3>
+          <h3>Cloud Hosting</h3>
+          <h3>Private Hosting</h3>
+        </div>
+        <div class="links-box2">
+          <h2>Hosting</h2>
+          <h3>Cheap Hosting</h3>
+          <h3>Hosting Wordpress</h3>
+          <h3>Email Hosting</h3>
+          <h3>Hosting Unlimited</h3>
+        </div>
+        <div class="links-box2">
+          <h2>Company</h2>
+          <h3>About</h3>
+          <h3>Career</h3>
+          <h3>Contact Us</h3>
+        </div>
+        <div class="links-box2">
+          <h2>Help</h2>
+          <h3>FAQ</h3>
+          <h3>Help support</h3>
+        </div>
+      </div>
+      <div class="copyright">
+        <h3>Built by Anarasty. &#169; Copyright 2022</h3>
+      </div>
+    </footer>
   </body>
 </html>
