main page menus functional added

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       <div class="container-content">
         <div class="menu">
           <ul>
-            <li class="selected-li">Hosting</li>
-            <li>Domain</li>
-            <li>SEO</li>
-            <li>Email</li>
+            <li id="hosting" class="selected-li"><p>Hosting</p></li>
+            <li id="domain">Domain</li>
+            <li id="seo">SEO</li>
+            <li id="email">Email</li>
           </ul>
         </div>
         <div class="title">
-          <h2>Premium Web Hosting for Your Website</h2>
+          <h2 id="title-main">Premium Web Hosting for Your Website</h2>
         </div>
         <div class="description">
-          <p>
+          <p id="description-main">
             Blazing fast web hosting for individuals and businesses of all sizes
             backed by 24 x 7 x 365 Support.
           </p>
@@ -365,5 +365,7 @@
         <h3>Built by Anarasty. &#169; Copyright 2022</h3>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
